--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<mapstruct.version>1.6.3</mapstruct.version>
 		<springdoc.version>2.6.0</springdoc.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+		<yauaa.version>7.28.1</yauaa.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -138,6 +139,11 @@
 			<artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
 			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>nl.basjes.parse.useragent</groupId>
+			<artifactId>yauaa</artifactId>
+			<version>${yauaa.version}</version>
 		</dependency>
 	</dependencies>
 
