Fixed LocalDateTime JSON serializer, fixed AuthenticationManager logic

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,10 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcpkix-jdk18on</artifactId>
 			<version>${bouncycastle.version}</version>
