--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Set short git commit SHA
+      id: vars
+      run: |
+        calculatedSha=$(git rev-parse --short ${{ github.sha }})
+        echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -25,5 +30,5 @@ jobs:
         DOCKER_REGISTRY_USER: ${{ secrets.REGISTRY_LOGIN }}
         DOCKER_REGISTRY_PASS: ${{ secrets.REGISTRY_PASS }}
         DOCKER_REGISTRY_HOST: ${{ vars.REGISTRY_HOST }}
-        API_VERSION: $(git rev-parse --short "$GITHUB_SHA")
+        API_VERSION: ${{ env.COMMIT_SHORT_SHA }}
       run: mvn docker:build docker:push --file pom.xml
